# Aulon

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE.md  README.md  deny.toml
.github/workflows/: ci.yml
bench/: echo.sh  fanout.sh  headline.sh
crates/aulon-bench/: Cargo.toml
crates/aulon-bench/src/: fanout.rs  main.rs
crates/aulon-core/: Cargo.toml  PUBLIC_API.txt
crates/aulon-core/benches/: buffer_pool.rs  trie.rs
crates/aulon-core/src/: buffer_pool.rs  connection.rs  connection_state.rs  eventfd.rs  lib.rs  shard_inbox.rs  subscription.rs  topology.rs
crates/aulon-core/tests/: loom_inbox.rs
crates/aulon-proto/: Cargo.toml
crates/aulon-proto/benches/: parse.rs
crates/aulon-proto/src/: emit.rs  error.rs  frame.rs  lib.rs  parse.rs
crates/aulon-proto/tests/: proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs
crates/aulon-server/: Cargo.toml
crates/aulon-server/src/: main.rs
docs/: MILESTONES.md  SCOPE.md  aulon-nats-demo.cast
docs/design/: INDEX.md  buffer-pool.md  connection-lifecycle.md  dev-environment.md  fanout.md  routing-v1.md  runtime.md  sq-batching.md  subscription-trie.md  topology-sharding.md  wire-codec.md
docs/reviews/: checkpoint-1.md  checkpoint-2.md  checkpoint-3.md  checkpoint-4.md  checkpoint-5.md
docs/war-stories/: loom-tokio-cfg.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_frame.rs
scripts/: snapshot-public-api.sh
