[workspace]
resolver = "2"
members = [
    "crates/aulon-proto",
    "crates/aulon-core",
    "crates/aulon-server",
    "crates/aulon-bench",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HueCodes/aulon"
authors = ["Hugh Ryan <hugh.t.ryan@gmail.com>"]
rust-version = "1.85"

[workspace.dependencies]
tokio-uring = { version = "0.5" }
tokio = { version = "1", default-features = false, features = ["sync"] }
hdrhistogram = { version = "7", default-features = false }
criterion = { version = "0.5" }
smallvec = { version = "1.13" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_doctest_main = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = "line-tables-only"

[profile.bench]
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
