[package]
name = "aulon-bench"
description = "HDR-histogram-aware benchmark client for Aulon."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "aulon-bench"
path = "src/main.rs"

[[bin]]
name = "aulon-fanout"
path = "src/fanout.rs"

[dependencies]
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-uring = { workspace = true }
hdrhistogram = { workspace = true }

[lints]
workspace = true
