[package]
name = "aulon-core"
description = "Runtime, buffer pool, and routing for Aulon."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tokio-uring = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "buffer_pool"
harness = false

[lints]
workspace = true
