[package]
name = "aulon-proto"
description = "NATS-core wire protocol codec for Aulon."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true
