[package]
name = "aulon-server"
description = "Aulon broker binary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "aulon-server"
path = "src/main.rs"

[dependencies]
monoio = { workspace = true }

[lints]
workspace = true
